# NewsCrawler

./: .dockerignore  .gitignore  AGENTS.md  CLAUDE.md  DOCKER_DEPLOYMENT.md  Dockerfile  README.en.md  README.md  call_example.py  docker-compose.yml  main.py  pyproject.toml  requirements.txt  response.html  summary.md
cover_video/: downloader.py  schemas.py  video_tag.py  video_usage.py
detik_news/: detik_news.py
lennysnewsletter/: lennysnewsletter.py
libs/: drissionpage_driver.py  playwright_driver.py  tools.py
mixkit_video/: downloader.py  logger.py  schemas.py  user_agent.py  video_usage.py
naver_news/: naver_news.py
news-extractor-ui/: README.md
news-extractor-ui/backend/: README.md  pyproject.toml  run.py
news-extractor-ui/backend/app/adapters/: __init__.py  base.py  detik.py  lenny.py  naver.py  netease.py  quora.py  sohu.py  tencent.py  toutiao.py  wechat.py
news-extractor-ui/backend/app/api/: extract.py
news-extractor-ui/backend/app/services/: detector.py  extractor.py  formatter.py
news-extractor-ui/backend/tests/: conftest.py  test_extract_api.py
news-extractor-ui/backend/tests/fixtures/: detik.html  detik.json  lenny.html  lenny.json  naver.html  naver.json  netease.html  netease.json  quora.html  quora.json  toutiao.html  toutiao.json  wechat.html  wechat.json
news-extractor-ui/frontend/: README.md  index.html  (+1 more)
news_crawler/: __init__.py
news_extractor_backend/: cli.py  main.py  pyproject.toml
news_extractor_core/: __init__.py  config.py  models.py  pyproject.toml
news_extractor_mcp/: README.md  README.zh-CN.md  __init__.py  pyproject.toml  server.py
pexel/: image_usage.py  video_usage.py
pixabay/: image_usage.py  video_usage.py
toutiao_news/: toutaio_news.py
video_config/: video_tag.py  video_tag2.py
wechat_news/: __init__.py  wechat_news.py
(+86 files in other folders)
