[project]
name = "news-extractor-backend"
version = "0.1.0"
description = "Backend API for News Extractor UI"
requires-python = ">=3.8"
dependencies = [
    "fastapi==0.115.0",
    "uvicorn[standard]==0.32.0",
    "pydantic==2.9.2",
    "python-multipart==0.0.12",
    "websockets==13.1",
    "lxml==5.3.0",
    "parsel==1.9.1",
    "requests==2.32.3",
    "tenacity==8.2.2",
    "pytz==2024.2",
    "demjson3==3.0.6",
    "curl-cffi==0.7.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.uv]
dev-dependencies = []


[[tool.uv.index]]
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
default = true